# claude-gateway

./: .antigravityignore  .claudesignore  .gitignore  .semgrepignore  CLAUDE.md  INFRASTRUCTURE-MAP.md  Model-Guide.md  README.md  Tier1-AIClient2API  ULTIMATE-GOAL.MD  package-lock.json
.claude/agents/: security-reviewer.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/tmp/: docs-work-manifest.json
AIClient2API/: .gitignore  .semgrepignore  OPERATION.md  README-JA.md  README-ZH.md  README.md  Setup-Guide.md  package.json  pnpm-lock.yaml  test-claude.sh  test-select.js  test-startup.js  test-startup.mjs  test-status.js  test-tools.sh  test_convert.js  test_convert2.js  test_curl.js  test_tool_call.js
AIClient2API/configs/: config.json  model-catalog.json  (+1 more)
AIClient2API/src/native/tokenizer-rs/: Cargo.toml
Known-Errors/: errors needing fixes.md  tool_failure_root_cause.md
Tier1-AIClient2API/: ## Claude code cli plugins & Resources.md  .aiderignore  .gitignore  .windsurfignore  CLAUDE.md  README-JA.md  package.json
Tier2-LiteLLM/: litellm_config.yaml
docs/: AIClient-BP.md  ANTHROPIC_GATEWAY_SPEC.md  ARCHITECTURE.md  Architecture-and-Proxy-Integration.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  Model-Guide.md  SYSTEM-OVERVIEW.md  TESTING.md  Troubleshooting-and-Fixes.md  ULTIMATE-GOAL.md
(+201 files in other folders)
