[package]
name = "aiclient-tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
tokenizers = { version = "0.21", default-features = false, features = ["unstable_wasm"] }
once_cell = "1.19.0"

[build-dependencies]
napi-build = "2.0.1"
